--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ main{
     align-items: center;
 }
 .selector-fechas{
+    height: 12%;
     display: flex;
     justify-items: center;
     align-items: center;
@@ -79,4 +80,17 @@ main{
 }
 .submit:hover{
     background-color:darksalmon;
+}
+.listas-semanas{
+    width: 90%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+.listas-semanas div{
+    margin: 1%;
+    width: 100%;
+    height: 80px;
+    background-color: #fff;
+    box-shadow: 0 3px 13px 1px rgb(0 0 0/ 15%);
 }
