--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ main{
 }
 .selector-fechas input{
     min-width: 99px;
+    height: 18px;
 }
 .submit{
     margin: 1px;
@@ -85,26 +86,43 @@ main{
 .listas-semanas{
     width: 90%;
     height: auto;
-    display: flex;
-    flex-direction: column;
+    text-align: center;
+    display: grid;
+    grid-column-gap: 1%;
+    grid-row-gap: 1%;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(5, 1fr);
 }
-.listas-semanas div{
+.listas-semanas .menu{
     margin: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
     width: 100%;
     height: 80px;
     background-color: #fff;
+    color: black;
+    font-size: 80%;
     box-shadow: 0 3px 13px 1px rgb(0 0 0/ 15%);
+}
+.listas-semanas .menu:hover{
+    background-color: darkred;
+    color: #fff;
 }
 @media (max-width: 845px){
     .selector-fechas{
         flex-direction: column;
         height: auto;
+        margin: 0px 0px 25px 0px;
     }
     .selector-fechas input{
         width: 50%;
+        height: 25px;
+        margin-bottom: 5px;
     }
     .selector-fechas .submit{
         width: 50%;
+        margin-bottom: 5px;
         font-size: 0.8em;
     }
     .texto-explicativo{
@@ -112,5 +130,12 @@ main{
     }
     .rango-fechas{
         font-size: 0.8em;
+    }
+    .listas-semanas{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        grid-column-gap: 1%;
+        font-size: 90%;
     }
 }
